# Amethyst

./: CMakeLists.txt
source/: amethyst  engine.h
source/callbacks/: callbackmanager.cpp  callbackmanager.h
source/compiled/: shaders.h
source/compiled/shaders/: texture2d.frag  texture2d.vert
source/gui/button/: button.cpp  button.h
source/gui/text/: charset.cpp  charset.h  text.cpp  text.h
source/io/: keyboard.cpp  keyboard.h  wavefrontparser.cpp  wavefrontparser.h
source/math/: boundingbox.cpp  boundingbox.h  boundingbox2d.cpp  boundingbox2d.h  time.cpp  time.h
source/math/transformation/: position.cpp  position.h  rotation.cpp  rotation.h  scale.cpp  scale.h  transformation.cpp  transformation.h  transformationcomponent.cpp  transformationcomponent.h
source/mesh/: mesh.h  meshgenerator.h
source/opengl/: framebuffer.cpp  framebuffer.h  pixelfield.cpp  pixelfield.h  shader.cpp  shader.h  texture.cpp  texture.h  vbo.h
source/profiler/: profiler.cpp  profiler.h
source/render/: renderstructs.h
source/render/renderer/: renderer2d.cpp  renderer2d.h
source/util/: amethystexception.h  fastfileio.h  logger.h  queue.h  runnable.cpp  runnable.h  scheduler.cpp  scheduler.h  stringedit.h  util.h
source/view/: DebugCamera.cpp  camera.cpp  camera.h  debugcamera.h  window.cpp  window.h
